# VoxelRenderingEngine

./: .gitignore  3Dlearning.sln  3Dlearning.vcxproj  3Dlearning.vcxproj.filters  CMakeLists.txt  Camera.cpp  Camera.h  ChunkClass.cpp  ChunkClass.h  Direction.h  Main.cpp  OctTreeClass.cpp  OctTreeClass.h  PackedVector.h  README.md  RendererClass.cpp  RendererClass.h  VBO.h  Window.cpp  WorldClass.h  default.frag  default.vert  glad.c  shaderClass.cpp  window.h  worldClass.cpp
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
src/: Main.cpp
src/render/renderer/: RendererClass.cpp  RendererClass.h  shaderClass.cpp  shaderClass.h
src/world/core/: CellClass.h  ChunkClass.cpp  ChunkClass.h  WorldClass.h  worldClass.cpp
src/world/spatial/: OctTreeClass.cpp
